--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,4 +228,21 @@ h6 {
   color: white;
 }
 
+/* Progress bar styles */
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  margin-top: 15px;
+}
+
+.progress-bar-fill {
+  width: 0;
+  height: 100%;
+  background-color: #4682B4;
+  border-radius: 5px;
+  transition: width 0.3s linear;
+}
+
 
