Added styling to digital clock inside timer area, added custom font and applied to timer display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,4 +245,24 @@ h6 {
   transition: width 0.3s linear;
 }
 
+/* Digital Clock inside timer area */
+@font-face {
+  font-family: 'DS-DIGI';
+  src: url('/assets/fonts/DS-DIGI.TTF') format('truetype');
+}
+
+#time {
+  font-size: clamp(2.5rem, 10vw, 5rem);
+  font-family: 'DS-DIGI', sans-serif;
+  color: #4682B4;
+  text-align: center;
+}
+
+#time.fifteen-minutes-left {
+color: #32CD32;
+}
+
+/* Five minutes left */
+#time.nearing-end { color: #FF6347; }
+
 
