--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,4 +295,17 @@ color: #32CD32;
   left: 24px;
 }
 
+/* General modal styles */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 
