Added functionality for sign in & sign up form and switch function between both forms

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,4 +363,17 @@ color: #32CD32;
   text-decoration: none;
 }
 
+input {
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+}
 
+.close-btn {
+  color: #FAFAFA;
+  font-size: 28px;
+}
+
+.close-btn:hover {
+  color: #FFC857;
+}
