--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,11 @@ h6 {
   margin-bottom: 12px;
 }
 
+.social-icons {
+  display: flex;
+  justify-content: center;
+}
+
 .sidebar-footer .social-icons i {
   margin: 0 6px;
   font-size: 22px;
@@ -105,6 +110,8 @@ h6 {
 
 .sidebar-footer .social-icons i:hover {
   color: #ffc857;
+  color: #353935;
+  transform: scale(1.07);
   cursor: pointer;
 }
 
